--- a/style.css
+++ b/style.css
@@ -1,3 +1,128 @@
-#test{
-    color: aqua;
+*{
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
 }
+.container{
+    width: 100vw;
+    height: fit-content;
+    background-color: rgb(204, 204, 206);
+}
+
+/*NAV
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #575656;
+    overflow: hidden;
+    
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+    background-color: #434444;
+    color: white;
+  }
+  .logoDiv{
+    display: block;
+    background-color: rgb(204, 204, 206);
+    height: fit-content;
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  .logoImg{
+    width: 150px;
+    
+  }
+  .introDiv{
+    background-color: rgb(204, 204, 206);
+    max-width: 100vw;
+  }
+  .introImg{
+    position: absolute;
+    top: 50%;
+    left: 7%;
+    max-height:84vh;
+    overflow: hidden;
+    top: 143px;
+    
+  }
+  .introMsg{
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+    height: fit-content;
+    padding: 15px 15px 30px 15px;
+    font-size: 1rem;
+    background-color: #ddd;    
+    border-radius: 15px;
+    font-family: 'Wix Madefor Display', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .contactBtn{
+    align-self: center;
+    padding: 10px;
+    outline: none;
+    border: none;
+  }
+  .contactBtn:hover{
+    background-color: #434444;
+    color: white;
+  }
+.constructionDiv{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 100%;
+}
+  @media screen and (max-width: 800px) {
+    .container{
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+    }
+    .introImg{
+        position: absolute;
+        top: 60%;
+        left: -20vw;
+        max-height:84vh;
+        overflow: hidden;
+        top: 143px;
+        
+      }
+    .introMsg{
+        position: absolute;
+        top: 70%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 300px;
+        width: 80%;
+        
+        background-color: #ddd;
+        padding: 35px;
+        border-radius: 15px;
+        font-family: 'Wix Madefor Display', sans-serif;
+      }
+    
+  }
