--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
     position: relative;
     top: 50%;
     left: 7%;
-   height:80vh;
+    height:80vh;
     overflow: hidden;
     top: 143px;
     
@@ -83,12 +83,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   }
   .contactBtn{
     align-self: center;
     padding: 10px;
     outline: none;
     border: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   }
   .contactBtn:hover{
     background-color: #434444;
@@ -98,7 +100,7 @@
 .hosting{
     display: flex;
     justify-content: space-around;
-    margin: 0 250px 0 250px;
+    margin: 30px 250px 0 250px;
     padding-top: 150px;
     height: 100vh;
     background-color: rgb(204, 204, 206);
@@ -109,10 +111,30 @@
     height: 300px;
     width: max-content;
     background-color: #f2f2f2;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 .disclaimerTxt{
     position: fixed;
     bottom: 0;
+}
+.sites{
+    display: flex;
+    justify-content: space-around;
+    margin: 30px 30px 30px 30px;
+    padding-top: 175px;
+    height: 100vh;
+    background-color: rgb(204, 204, 206);
+}
+.demoCrd{
+    
+    padding: 25px;
+    height: fit-content;
+    width: max-content;
+    background-color: #f2f2f2;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.cardImage{
+    width: 200px;
 }
   @media screen and (max-width: 800px) {
     .container{
@@ -142,5 +164,19 @@
         border-radius: 15px;
         font-family: 'Wix Madefor Display', sans-serif;
       }
-    
+      .hosting{
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        margin: 10px 250px 10px 250px;
+        padding-top: 150px;
+        height: 100%;
+      }
+      .pkgCard{
+        padding: 50px;
+        margin: 5px;
+        height: 300px;
+        width: max-content;
+        background-color: #f2f2f2;
+    }
   }
