--- a/style.css
+++ b/style.css
@@ -15,8 +15,7 @@
 /*NAV
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #575656;
-    overflow: hidden;
+    background-color: #575656;   
     position: fixed;
     width: 100%;
   }
@@ -28,8 +27,7 @@
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
-    
+    font-size: 17px;    
   }
   
   /* Change the color of links on hover */
@@ -57,7 +55,7 @@
   }
   .introDiv{
     background-color: rgb(204, 204, 206);
-    max-width: 100vw;
+    max-width: 100%;
     height: 100vh;
   }
   .about{
@@ -68,7 +66,7 @@
     position: relative;
     top: 50%;
     left: 7%;
-    height:80vh;
+    height:100%;
     overflow: hidden;
     top: 143px;
     
@@ -147,7 +145,17 @@
     .container{
         display: flex;
         flex-direction: column;
+        align-items: center;
         overflow: hidden;
+        height: 100%;
+    }
+    .topnav{
+        position: fixed;
+        left: 0;
+    }
+    .logoDiv{
+        position: fixed;
+        left: 0;
     }
     .introImg{
         position: absolute;
@@ -175,6 +183,7 @@
       .hosting{
         flex-direction: column;
         justify-content: space-around;
+        align-content: center;
         align-items: center;
         margin: 10px 250px 10px 250px;
         padding-top: 150px;
@@ -205,5 +214,9 @@
     }
     .cardImage{
         width: 325px;
+    }
+    .about{
+        position: absolute;
+        top: 150px;
     }
   }
