--- a/style.css
+++ b/style.css
@@ -66,8 +66,8 @@
     position: relative;
     top: 50%;
     left: 7%;
-    height:100%;
-    overflow: hidden;
+    max-height:84vh;
+    overflow: none;
     top: 143px;
     
   }
@@ -147,7 +147,7 @@
         flex-direction: column;
         align-items: center;
         overflow: hidden;
-        height: 100%;
+        height: 100vh;
     }
     .topnav{
         position: fixed;
@@ -160,9 +160,9 @@
     .introImg{
         position: absolute;
         top: 60%;
-        left: -20vw;
-        max-height:84vh;
-        overflow: hidden;
+        left: -60vw;
+        height: 783px;
+        
         top: 143px;
         
       }
